@@ -1,6 +1,7 @@
 # 使用 JDK 21 作为基础镜像
-FROM eclipse-temurin:21-jdk-jammy
-
+# FROM eclipse-temurin:21-jdk-jammy
+FROM swr.cn-north-4.myhuaweicloud.com/ddn-k8s/docker.io/openjdk:21
+# FROM subing-local-jdk:21
 # 设置工作目录
 WORKDIR /app
 
@@ -17,10 +18,5 @@ EXPOSE 8080
 ENV TZ=Asia/Shanghai
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
-# 启动命令，添加 GC 日志配置
-ENTRYPOINT ["java", \
-    "-XX:+UseG1GC", \
-    "-Xlog:gc*:/app/logs/gc.log", \
-    "-jar", \
-    "/app/app.jar", \
-    "--spring.profiles.active=prod"] 
+
+CMD ["java", "-jar", "/app/app.jar"]
